codex-rs/tui_app_server/src/bottom_pane/snapshots/codex_tui_app_server__bottom_pane__chat_composer__tests__large.snap
---
source: tui_app_server/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"                                                                                                    "
"› [Pasted Content 1005 chars]                                                                       "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                   剩余上下文 100%  " Hidden by multi-width symbols: [(84, " "), (86, " "), (88, " "), (90, " "), (92, " ")]
