codex-rs/tui_app_server/src/bottom_pane/snapshots/codex_tui_app_server__bottom_pane__chat_composer__tests__mention_popup_type_prefixes.snap
---
source: tui_app_server/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"                                                                        "
"› $goog                                                                 "
"                                                                        "
"                                                                        "
"  Google Calendar  [插件] Connect Google Calendar for scheduling, avail…" Hidden by multi-width symbols: [(21, " "), (23, " ")]
"  Google Calendar  [Skill] Find availability and plan event changes     "
"  Google Calendar  [App] Look up events and availability                "
"                                                                        "
"  按 enter 插入，按 esc 关闭                                            " Hidden by multi-width symbols: [(3, " "), (12, " "), (14, " "), (16, " "), (18, " "), (25, " "), (27, " ")]
